test of new resources

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <h2 class="h2">Single Large</h2>
       <div class="columns w-row">
         <div class="column w-col w-col-6">
-          <div class="product w-embed"><a href="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.usdz" rel="ar">
-  <img src="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.jpeg">
+          <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/knit.usdz" rel="ar">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/knit.jpg">
 </a></div>
         </div>
         <div class="column w-col w-col-6">
