--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="columns w-row">
         <div class="column w-col w-col-4 w-col-small-small-stack">
           <div class="vertical">
-            <div class="product w-embed"><a href="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.usdz" rel="ar">
-  <img src="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.jpeg">
+            <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/impuls.usdz" rel="ar">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/impulse.usdz">
 </a></div>
             <div class="text">
               <h5 class="h5">New Balance</h5>
