--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="column w-col w-col-4 w-col-small-small-stack">
           <div class="vertical">
             <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/impuls.usdz" rel="ar">
-  <img src="https://raw.githubusercontent.com/coob113/model12/master/impulse.usdz">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/impulse.jpg">
 </a></div>
             <div class="text">
               <h5 class="h5">New Balance</h5>
