--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <h2 class="h2">Single Large</h2>
       <div class="columns w-row">
         <div class="column w-col w-col-6">
-          <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/knit.usdz" rel="ar">
-  <img src="https://raw.githubusercontent.com/coob113/model12/master/knit.jpg">
+          <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/impulse.usdz" rel="ar">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/impulse.usdz">
 </a></div>
         </div>
         <div class="column w-col w-col-6">
@@ -38,7 +38,7 @@
             <h5 class="h5">New Balance</h5>
             <h4 class="h4">FuelCell Impulse NY</h4>
             <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-            <div class="fake_button">← tap on picture</div>
+            <div class="fake_button">tap on picture</div>
           </div>
         </div>
       </div>
@@ -57,33 +57,33 @@
               <h5 class="h5">New Balance</h5>
               <h4 class="h4">FuelCell Impulse NY</h4>
               <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-              <div class="fake_button">↑ tap on picture</div>
+              <div class="fake_button">tap on picture</div>
             </div>
           </div>
         </div>
         <div class="column w-col w-col-4 w-col-small-small-stack">
           <div class="vertical">
-            <div class="product w-embed"><a href="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.usdz" rel="ar">
-  <img src="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.jpeg">
+            <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/knit.usdz" rel="ar">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/knit.jpg">
 </a></div>
             <div class="text">
               <h5 class="h5">New Balance</h5>
               <h4 class="h4">Fresh Foam Cruz v2 Knit</h4>
               <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-              <div class="fake_button">↑ tap on picture</div>
+              <div class="fake_button">tap on picture</div>
             </div>
           </div>
         </div>
         <div class="column w-col w-col-4 w-col-small-small-stack">
           <div class="vertical">
-            <div class="product w-embed"><a href="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.usdz" rel="ar">
-  <img src="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.jpeg">
+            <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/sport.usdz" rel="ar">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/sport.jpg">
 </a></div>
             <div class="text">
               <h5 class="h5">New Balance</h5>
               <h4 class="h4">FRESH FOAM CRUZ V2 sport</h4>
               <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-              <div class="fake_button">↑ tap on picture</div>
+              <div class="fake_button">tap on picture</div>
             </div>
           </div>
         </div>
@@ -99,14 +99,14 @@
           <div class="list">
             <div class="w-row">
               <div class="w-col w-col-6 w-col-small-6">
-                <div class="product w-embed"><a href="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.usdz" rel="ar">
-  <img src="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.jpeg">
+                <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/impulse.usdz" rel="ar">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/impulse.jpg">
 </a></div>
               </div>
               <div class="w-col w-col-6 w-col-small-6">
                 <div class="text">
                   <h4 class="h4 small">FUELCELL IMPULSE NY</h4>
-                  <div class="fake_button"><strong>←</strong> tap on picture</div>
+                  <div class="fake_button">tap on picture</div>
                 </div>
               </div>
             </div>
@@ -114,14 +114,14 @@
           <div class="list">
             <div class="w-row">
               <div class="w-col w-col-6 w-col-small-6">
-                <div class="product w-embed"><a href="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.usdz" rel="ar">
-  <img src="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.jpeg">
+                <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/knit.usdz" rel="ar">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/knit.jpg">
 </a></div>
               </div>
               <div class="w-col w-col-6 w-col-small-6">
                 <div class="text">
                   <h4 class="h4 small">FRESH FOAM CRUZ V2 KNIT</h4>
-                  <div class="fake_button"><strong>← </strong>tap on picture</div>
+                  <div class="fake_button">tap on picture</div>
                 </div>
               </div>
             </div>
@@ -129,14 +129,14 @@
           <div class="list">
             <div class="w-row">
               <div class="w-col w-col-6 w-col-small-6 w-col-tiny-tiny-stack">
-                <div class="product w-embed"><a href="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.usdz" rel="ar">
-  <img src="https://www.vectary.com/download/usdz/a89eacba-f168-451a-8ab3-bae8249ed8b9.jpeg">
+                <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/sport.usdz" rel="ar">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/sport.jpg">
 </a></div>
               </div>
               <div class="w-col w-col-6 w-col-small-6 w-col-tiny-tiny-stack">
                 <div class="text">
                   <h4 class="h4 small">FRESH FOAM CRUZ V2 sport</h4>
-                  <div class="fake_button"><strong>←</strong> tap on picture</div>
+                  <div class="fake_button">tap on picture</div>
                 </div>
               </div>
             </div>
