--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="columns w-row">
         <div class="column w-col w-col-6">
           <div class="product w-embed"><a href="https://raw.githubusercontent.com/coob113/model12/master/impulse.usdz" rel="ar">
-  <img src="https://raw.githubusercontent.com/coob113/model12/master/impulse.usdz">
+  <img src="https://raw.githubusercontent.com/coob113/model12/master/impulse.jpg">
 </a></div>
         </div>
         <div class="column w-col w-col-6">
