--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Sep 28 2018 20:46:06 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Sep 29 2018 08:44:32 GMT+0000 (UTC)  -->
 <html data-wf-page="5bae5d953cb3642bcecf44d5" data-wf-site="5bae5d953cb364c216cf44d4">
 <head>
   <meta charset="utf-8">
@@ -14,8 +14,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Oswald:200,300,400,500,600,700","Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link href="images/32.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/256.jpg" rel="apple-touch-icon">
 </head>
 <body>
   <div class="header">
@@ -149,7 +149,7 @@
     <div class="container w-container">
       <h2 class="h2">It supposed to work like this:</h2>
     </div>
-    <div class="video w-embed w-iframe"><iframe width="560" height="315" src="https://www.youtube.com/embed/-u63VHbLv_k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
+    <div class="video w-embed w-iframe"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/zvivUkEacfs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
   </div>
   <div class="footer">
     <div class="container w-container">
